; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clk.c_clk_prepare_lock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clk.c_clk_prepare_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prepare_lock = common dso_local global i32 0, align 4
@prepare_owner = common dso_local global i32* null, align 8
@current = common dso_local global i32* null, align 8
@prepare_refcnt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @clk_prepare_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clk_prepare_lock() #0 {
  %1 = call i32 @mutex_trylock(i32* @prepare_lock)
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %12, label %3

3:                                                ; preds = %0
  %4 = load i32*, i32** @prepare_owner, align 8
  %5 = load i32*, i32** @current, align 8
  %6 = icmp eq i32* %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %3
  %8 = load i32, i32* @prepare_refcnt, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* @prepare_refcnt, align 4
  br label %22

10:                                               ; preds = %3
  %11 = call i32 @mutex_lock(i32* @prepare_lock)
  br label %12

12:                                               ; preds = %10, %0
  %13 = load i32*, i32** @prepare_owner, align 8
  %14 = icmp ne i32* %13, null
  %15 = zext i1 %14 to i32
  %16 = call i32 @WARN_ON_ONCE(i32 %15)
  %17 = load i32, i32* @prepare_refcnt, align 4
  %18 = icmp ne i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @WARN_ON_ONCE(i32 %19)
  %21 = load i32*, i32** @current, align 8
  store i32* %21, i32** @prepare_owner, align 8
  store i32 1, i32* @prepare_refcnt, align 4
  br label %22

22:                                               ; preds = %12, %7
  ret void
}

declare dso_local i32 @mutex_trylock(i32*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @WARN_ON_ONCE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
